<resources>
    <string name="app_name">AllInOne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">twitter</string>
    <string name="linkedin">linkedIn</string>
    <string name="youtube">youtube</string>
    <string name="instagramtext">Instagram</string>
    <string name="facebooktext">Facebook</string>
    <string name="twitter_x">Twitter X</string>
    <string name="linkedintext">LinkedIn</string>
    <string name="youtubetxt">Youtube</string>
</resources>