<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#373333"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Main Menu"
        app:titleMarginStart="64sp"
        android:background="#272020"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/MyToolbarTitleText"
        app:navigationIcon="@drawable/baseline_menu_24"
        app:navigationContentDescription="@string/youtube"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalIcons"
        android:layout_marginTop="50dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/instagramIcon"
                android:layout_marginStart="33dp"
                android:src="@drawable/instagram"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/instagram"
                />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/faceBookIcon"
                android:layout_marginStart="44dp"
                android:src="@drawable/facebook"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/facebook"
                />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:id="@+id/twitter"
                android:src="@drawable/twitter"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/twitter"
                />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/linkedInIcon"
                android:src="@drawable/linkedin"
                android:layout_marginStart="44dp"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/linkedin"
                />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:id="@+id/youtube"
                android:src="@drawable/youtube"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/youtube"
                />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:id="@+id/youtube1"
                android:src="@drawable/youtube"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/youtube"
                />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:id="@+id/youtube2"
                android:src="@drawable/youtube"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/youtube"
                />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:id="@+id/youtube3"
                android:src="@drawable/youtube"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                android:contentDescription="@string/youtube"
                />
        </LinearLayout>
    </HorizontalScrollView>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:columnCount="2">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:backgroundTint="#10384C"
            android:clickable="true"
            android:focusable="true"
          app:cardElevation="22dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/instagramCard"
                    android:layout_width="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/instagram"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/instagram" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/instagramtext"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true" app:cardElevation="22dp"

            android:backgroundTint="#10384C">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/faceBookCard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/facebook"
                android:scaleType="centerInside"
                android:layout_marginBottom="16dp"
                android:src="@drawable/facebook" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/facebooktext"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="22dp"

            android:backgroundTint="#10384C">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/twitterCard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/twitter"
                android:scaleType="centerInside"
                android:layout_marginBottom="16dp"
                android:src="@drawable/twitter" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/twitter_x"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true" app:cardElevation="22dp"

            android:backgroundTint="#10384C">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/linkedInCard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/linkedin"
                android:scaleType="centerInside"
                android:layout_marginBottom="16dp"
                android:src="@drawable/linkedin" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/linkedintext"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardElevation="22dp"
android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#10384C">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/youtubeCard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/youtube"
                android:scaleType="centerInside"
                android:layout_marginBottom="16dp"
                android:src="@drawable/youtube" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/youtubetxt"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>
</LinearLayout>